# FlutterDemo

./: .flutter-version  .last_build_id  .metadata  CNAME  LICENSE  README.md  create  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  version.json
.github/workflows/: main.yml  update.yml
android/: README.md  gradle.properties
android/app/: build.gradle  build.gradle.kts
android/gradle/: signing.gradle
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
canvaskit/: canvaskit.js.symbols  skwasm.js.symbols  skwasm.wasm  skwasm_heavy.js.symbols
canvaskit/chromium/: canvaskit.js.symbols
command_app/: pubspec.yaml
command_app/lib/: command_app.dart
command_app/test/: command_app_test.dart
embed_test/: CMakeLists.txt  main.cc  my_application.cc  my_application.h  test.sh  wrapper_application.cc  wrapper_application.h  wrapper_main.cc
ios/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: client.dart  cors.dart  csv.dart  get.dart  main.dart  mixed.dart
lib/connect/: connect.dart  connect_native.dart  connect_web.dart
lib/src/: app.dart
linux/: CMakeLists.txt  README.md  my_application.cc
linux/runner/: my_application.cc
macos/: README.md
macos/Runner/: Info.plist
script/: create  env.sh  go_make_web.sh  linux_docker.sh  update
server/: .gitignore  pubspec.yaml
test/: .gitignore  binary_test.dart  fetch_album_test.dart  widget_test.dart
util/: pubspec.yaml
web/: README.md  index.html  libnative_add.wasm  prebuild
windows/: CMakeLists.txt  README.md
(+33 files in other folders)
